syntax = "proto3";

package micro.service.language.language.v1;

option go_package = "github.com/seidu626/audiobook/service/language/proto/language";
option java_multiple_files = true;
option java_package = "micro.service.language.language.v1";

import "google/protobuf/wrappers.proto";
// import "shared/proto/common/common.proto";
import "service/language/proto/entities/entities.proto";
import "third_party/proto/validate/validate.proto";

// Ref:
// https://github.com/seizadi/atlas-template/blob/master/resolved/pkg/pb/cmdb.proto

// User Service
service UserService {
  rpc Exist(ExistRequest) returns (ExistResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// with Workaround in .override.go
message ExistRequest {
  google.protobuf.StringValue id = 1
      [(validate.rules).string.uuid = true];  // Not Working
  google.protobuf.StringValue name = 2 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
  google.protobuf.StringValue abbreviation = 3;
}

message ExistResponse {
  option (validate.disabled) = true;
  bool result = 1;
}

message ListRequest {
  google.protobuf.UInt32Value limit = 1
      [(validate.rules).uint32 = { gte: 1 lte: 100 }];
  google.protobuf.UInt32Value page = 2 [(validate.rules).uint32.gte = 1];
  google.protobuf.StringValue sort = 3;
  google.protobuf.StringValue name = 4 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
  google.protobuf.StringValue abbreviation = 5
      [(validate.rules).string.min_len = 3];
  google.protobuf.StringValue flag_src = 6
      [(validate.rules).string.min_len = 3];
}

message ListResponse {
  option (validate.disabled) = true;
  repeated micro.service.language.entities.v1.Language results = 1;
  uint32 total = 2;
}

message GetRequest {
  google.protobuf.StringValue id = 1
      [(validate.rules).string.uuid = true];  // Not Working
  google.protobuf.StringValue name = 2 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
  google.protobuf.StringValue abbreviation = 3
      [(validate.rules).string.min_len = 3];
  google.protobuf.StringValue flag_src = 4
      [(validate.rules).string.min_len = 3];
}

message GetResponse {
  option (validate.disabled) = true;
  micro.service.language.entities.v1.Language result = 1;
  // basic.Error error =2;
}

message CreateRequest {
  google.protobuf.StringValue name = 2 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
  google.protobuf.StringValue abbreviation = 3
      [(validate.rules).string.min_len = 3];
  google.protobuf.StringValue flag_src = 4
      [(validate.rules).string.min_len = 3];
}

message CreateResponse {
  option (validate.disabled) = true;
  micro.service.language.entities.v1.Language result = 1;
}

message UpdateRequest {
  google.protobuf.StringValue id = 1
      [(validate.rules).string.uuid = true];  // Not Working
  google.protobuf.StringValue name = 2 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
  google.protobuf.StringValue abbreviation = 3
      [(validate.rules).string.min_len = 3];
  google.protobuf.StringValue flag_src = 4
      [(validate.rules).string.min_len = 3];
}

message UpdateResponse {
  option (validate.disabled) = true;
  micro.service.language.entities.v1.Language result = 1;
}

message DeleteRequest {
  google.protobuf.StringValue id = 1
      [(validate.rules).string.uuid = true];  // Not Working
  google.protobuf.StringValue name = 2 [(validate.rules).string = {
    min_len: 4
    max_len: 16
    pattern: "^[a-z0-9_-]{3,15}$"
    max_bytes: 256
  }];
}

message DeleteResponse {
  option (validate.disabled) = true;
  micro.service.language.entities.v1.Language result = 1;
}
